--- a/history.css
+++ b/history.css
@@ -56,6 +56,11 @@
       display: flex;
       align-items: center;      
   }
+  header a
+  {
+    text-decoration: none;
+    color: black;
+  }
   .heading1
   {
     margin-left: 1rem;
