--- a/style.css
+++ b/style.css
@@ -50,6 +50,7 @@
   {
       height: 7rem;
       width: 7rem;
+      cursor: pointer;
   }
   .circle
     {
@@ -66,8 +67,14 @@
   .heading
   {
       display: flex;
-      align-items: center;      
+      align-items: center; 
+      cursor: pointer;     
   }
+  header a
+{
+  text-decoration: none;
+  color: black;
+}
   .heading1
   {
     margin-left: 1rem;
