--- a/contact_us.css
+++ b/contact_us.css
@@ -106,6 +106,7 @@
       top: 0;      
       border-bottom: black .2rem solid;
       border-top: black .2rem solid;
+      z-index: 1;
   }
   nav ul{
       list-style: none;      
