--- a/contact_us.css
+++ b/contact_us.css
@@ -245,7 +245,7 @@
        
   }
   .right-side .input-box textarea{
-    padding-top: 6px;
+    padding-top: 10px;
   }
   .right-side .button{
     display: inline-block;
@@ -275,6 +275,19 @@
      width: 75%;
      margin-left: 55px;
   }
+
+  .right-side .button input[type="button"]
+  {
+   font-size: 10px;
+   padding: 8px 0px 17px 4px;
+   display: flex;
+     
+  }
+  .right-side .button{    
+   margin-top: 5px;
+   margin-bottom: 5px;
+ }
+  
   }
   @media (max-width: 820px) {
     .main-container{
@@ -282,7 +295,7 @@
       height: 100%;
     }
     .main-container .content{
-      flex-direction: column-reverse;
+      flex-direction: column;
     }
    .main-container .content .left-side{
      width: 100%;
@@ -298,6 +311,20 @@
      width: 100%;
      margin-left: 0;
    }
+
+   .right-side .button input[type="button"]
+   {
+    font-size: 10px;
+    padding: 8px 0px 17px 4px;
+    display: flex;
+      
+   }
+   .right-side .button{    
+    margin-top: 5px;
+    margin-bottom: 5px;
+  }
+  
+   
   }
   
   /* footer part  */
@@ -356,4 +383,65 @@
   {
     color: rgba(0, 125, 67, 1);  
     background-color: rgb(255, 255, 255);
+  }
+
+  /* responsiveness */
+  @media (min-width:320px)
+  {
+    html
+    {
+      font-size: 22%;
+    }
+    .circle
+  {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    background-color: rgba(224, 224, 224, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+  }
+
+  .contacticon
+  {
+    height: 1.7rem;
+    width: 1.7rem; 
+  }
+
+  nav
+  {
+    margin-top: 1rem;
+  }
+
+  }
+
+  @media (min-width:1025px)
+  {
+    html
+    {
+      font-size: 62.5%;
+    }
+    nav
+    {
+      margin-top: 0rem;
+    }
+    .circle
+    {
+      height: 5rem;
+      width: 5rem;
+      border-radius: 50%;
+      background-color: rgba(224, 224, 224, 1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 1rem;
+    }
+  
+    .contacticon
+    {
+      height: 3rem;
+      width: 3rem; 
+    }
   }
