--- a/map.css
+++ b/map.css
@@ -240,3 +240,64 @@
       color: white;
       font-size: 1.5rem;
   }
+
+  /* responsiveness */
+  @media (min-width:320px)
+  {
+    html
+    {
+      font-size: 22%;
+    }
+    .circle
+  {
+    height: 3rem;
+    width: 3rem;
+    border-radius: 50%;
+    background-color: rgba(224, 224, 224, 1);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 1rem;
+  }
+
+  .contacticon
+  {
+    height: 1.7rem;
+    width: 1.7rem; 
+  }
+
+  nav
+  {
+    margin-top: 1rem;
+  }
+
+  }
+
+  @media (min-width:1025px)
+  {
+    html
+    {
+      font-size: 62.5%;
+    }
+    nav
+    {
+      margin-top: 0rem;
+    }
+    .circle
+    {
+      height: 5rem;
+      width: 5rem;
+      border-radius: 50%;
+      background-color: rgba(224, 224, 224, 1);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      margin-right: 1rem;
+    }
+  
+    .contacticon
+    {
+      height: 3rem;
+      width: 3rem; 
+    }
+  }
